--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@
     --borderShadow: 5px solid var(--blackColor);
     --positionShadow: -10px 10px 0px var(--blackColor);
 
+    --borderError: 3px solid var(--pinkColor);
+
     /*Tags*/
 }
 
@@ -57,9 +59,10 @@ body {
 
 .container {
     width: 943px;
-    height: 459px;
+    height: 800px;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -67,7 +70,7 @@ body {
 .card {
     background: var(--blueColor);
     width: 100%;
-    height: 100%;
+    height: 460px;
 
     display: flex;
     flex-direction: row;
@@ -177,12 +180,19 @@ body {
     width: 96%;
 }
 
-#verify {
+.verify {
     background: var(--silver1Color);
     width: 6px;
     height: 100%;
 
     border-radius: var(--radius10);
+}
+
+.verifyError {
+ background-color: var(--pinkColor);
+}
+.pError {
+ color: var(--pinkColor) !important;
 }
 
 .inputName {
